--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -4,7 +4,7 @@
     "allowJs": true,
     "outDir": "dist",
     "esModuleInterop": true,
-    "module": "CommonJS",
+    "module": "ESNext",
     "strict": true
   },
   "include": ["src"],
