--- a/back/package.json
+++ b/back/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "type": "module",
   "scripts": {
+    "start": "ewr src/server.ts",
+    "build": "ewr --build-only src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/server.ts",
-    "build": "tsc",
     "start:prod": "node dist/server.js",
     "clean": "rimraf dist",
     "lint": "eslint ."
@@ -19,15 +19,14 @@
     "serve-index": "^1.9.1"
   },
   "devDependencies": {
+    "@jlguenego/esbuild-watch-restart": "^1.0.3",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.1",
     "@types/serve-index": "^1.9.1",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
     "eslint": "^8.50.0",
-    "nodemon": "^3.0.1",
     "rimraf": "^4.4.0",
-    "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
 }
